Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,4 +1,5 @@
 #summary Introduction to Ocrivist
+#labels freepascal,bindings,Tesseract,Leptonica,OCR
 
 = Introduction =
 Why is Ocrivist being developed?
@@ -9,4 +10,6 @@ I started to write Ocrivist because I would like to have a way of making digitis
 
 [http://gscan2pdf.sourceforge.net/ gscan2pdf] contains a lot of the functionality that I was looking for but unfortunately there is no way of selecting text to be scanned, so that tesseract attempts to scan everything on the page and text in columns becomes hopelessly mixed together.
 
+Another python project, [http://sourceforge.net/projects/gimagereader/ gimagereader], has better handling of OCR but lacks the ability to save to DJVU format. If my knowledge of Python was more than elementary, no doubt I could mix the code from the two projects to achieve my aim but, as OCR and image analysis already provide me with a steep learning curve, I opted to stick to the programming environment that I know best: Object Pascal and the Lazarus IDE.
 
+The project has also given me a reason to produce freepascal bindings for [http://code.google.com/p/tesseract-ocr/ libtesseract] and the [http://www.leptonica.com/ Leptonica] library. These can be found in their own folders in the base folder of the SVN repository.
