--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -4,16 +4,23 @@
 = Introduction =
 Why is Ocrivist being developed?
 
-
-= Details =
 I started to write Ocrivist because I would like to have a way of making digitised copies of magazines and other paper documents with searchable content. 
 
 [http://gscan2pdf.sourceforge.net/ gscan2pdf] contains a lot of the functionality that I was looking for but unfortunately there is no way of selecting text to be scanned, so that tesseract attempts to scan everything on the page and text in columns becomes hopelessly mixed together.
 
 Another python project, [http://sourceforge.net/projects/gimagereader/ gimagereader], has better handling of OCR but lacks the ability to save to DJVU format. If my knowledge of Python was more than elementary, no doubt I could mix the code from the two projects to achieve my aim but, as OCR and image analysis already provide me with a steep learning curve, I opted to stick to the programming environment that I know best: Object Pascal and the Lazarus IDE.
 
-A more recent project, [https://code.google.com/p/lector/ lector] has a very similar interface to my early pre-release versions of Ocrivist.
-
 The project has also given me a reason to produce freepascal bindings for [http://code.google.com/p/tesseract-ocr/ libtesseract] and the [http://www.leptonica.com/ Leptonica] library. These can be found in their own folders in the base folder of the SVN repository.
 
-At present Ocrivist is available only as Pascal source code from the [http://code.google.com/p/ocrivist/source/checkout SVN repository]. The code can be compiled using the [http://www.lazarus.freepascal.org/ Lazarus IDE]. It is planned to have binaries available for download early in December 2012.
+A more recent project, [https://code.google.com/p/lector/ lector] has a very similar interface to my early pre-release versions of Ocrivist and is worth trying if you are looking for an OCR application that works on Linux.
+
+
+=Ocrivist version 0.1=
+The first release of Ocrivist is now available to [http://code.google.com/p/ocrivist/downloads/detail?name=ocrivist-0.1-r1.tar.gz download].
+
+==Installation==
+Ocrivist can be installed using the installation script install.sh. The installation script will check that a number of [http://code.google.com/p/ocrivist/wiki/Dependencies dependencies] have already been installed and will abort if they are not available.
+
+Installing ocrivist is not essential - it can be run directly from the folder into which the downloaded archive has been extracted. However, it will not run if the dependencies have not been installed.
+
+Please let me know how you get on with Ocrivist and what distribution you are using.
