--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -15,12 +15,15 @@ The project has also given me a reason to produce freepascal bindings for [http:
 A more recent project, [https://code.google.com/p/lector/ lector] has a very similar interface to my early pre-release versions of Ocrivist and is worth trying if you are looking for an OCR application that works on Linux.
 
 
-=Ocrivist version 0.1=
-The first release of Ocrivist is now available to [http://code.google.com/p/ocrivist/downloads/detail?name=ocrivist-0.1-r1.tar.gz download].
+=Ocrivist version 0.2=
+The second release of Ocrivist is now available to download from  [https://googledrive.com/host/0B20R2_1XVoDsTml3ejdmbXJiMXc/ Google Drive].
 
-==Installation==
-Ocrivist can be installed using the installation script install.sh. The installation script will check that a number of [http://code.google.com/p/ocrivist/wiki/Dependencies dependencies] have already been installed and will abort if they are not available.
+==Installation (Linux)==
+Ocrivist can be installed on Linux using the installation script install.sh. The installation script will check that a number of [http://code.google.com/p/ocrivist/wiki/Dependencies dependencies] have already been installed and will abort if they are not available.
 
 Installing ocrivist is not essential - it can be run directly from the folder into which the downloaded archive has been extracted. However, it will not run if the dependencies have not been installed.
 
-Please let me know how you get on with Ocrivist and what distribution you are using.
+==Installation (Windows)==
+Ocrivist can be installed using the setup program in the [https://googledrive.com/host/0B20R2_1XVoDsTml3ejdmbXJiMXc/Windows/ downloads directory]. Before installing Ocrivist you should install [http://code.google.com/p/tesseract-ocr/downloads/detail?name=tesseract-ocr-setup-3.02.02.exe Tesseract-OCR 3.02] The setup program will abort if Tesseract is not installed.
+
+To benefit from all the functionality of Ocrivist you should also install [http://sourceforge.net/projects/djvu/files/DjVuLibre_Windows/ DjVuLibre] and [http://aspell.net/win32/ GNU Aspell], with appropriate language and dictionary packs.
