--- a/wiki/Dependencies.wiki
+++ b/wiki/Dependencies.wiki
@@ -8,17 +8,18 @@ Ocrivist makes use of a number of Linux libraries and other programs. Many of th
 == Libraries ==
   * [Dependencies#libtiff.so.4 libtiff.so.4]
 
-  * [Dependencies#liblept.so.2 liblept.so.2]
+  * [Dependencies#liblept.so.3 liblept.so.3]
 
-  * [Dependencies#libocrivist.so.3 libocrivist.so.3]
+  * [Dependencies#libtesseract.so.3 tesseract.so.3]
 
   * [Dependencies#libsane.so.1 libsane.so.1]
 
-  * [Dependencies#libaspell.so.15 libaspell.so.15]
 
 == Programs ==
 
   * [Dependencies#Djvulibre Djvulibre] binaries: djvumake djvused djvm djvudump ddjvu c44 cjb2 
+
+  * [Dependencies#GNUAspell GNU Aspell]
 ----
 
 === libtiff.so.4 ===
@@ -26,28 +27,34 @@ Ocrivist makes use of a number of Linux libraries and other programs. Many of th
 *libtiff* can usually be installed using your package manager. If you need to compile liblept or libocrivist for your system, make sure that the *libtiff development* package is also installed (libtiff4-dev on Debian-based systems, libtiff-devel on RPM-based systems)
 ----
  
-===liblept.so.2===
-*liblept.so.2* is required by both the ocrivist program and by libocrivist. It can be compiled and installed after downloading [http://code.google.com/p/leptonica/downloads/detail?name=leptonica-1.68.tar.gz leptonica v.1.68] from the [http://code.google.com/p/leptonica/ Leptonica Project]. See [Dependencies#Compiling_and_installing_libraries below] for guidance on compiling.
+===liblept.so.3===
+*liblept.so.3* is required by both the ocrivist program and by libtesseract. It can be compiled and installed after downloading [http://code.google.com/p/leptonica/downloads/detail?name=leptonica-1.69.tar.gz leptonica v.1.69] from the [http://code.google.com/p/leptonica/ Leptonica Project]. See [Dependencies#Compiling_and_installing_libraries below] for guidance on compiling.
+
+A precompiled version of liblept.so.3 is available in the [https://googledrive.com/host/0B20R2_1XVoDsTml3ejdmbXJiMXc/Linux/ Linux downloads folder]. This was compiled on Debian Squeeze and may not work on more recent distributions unless libpng12 is installed. On systems with libtiff.so.5 installed it may work if a link /usr/lib/libtiff.so.4 is created, pointing to libtiff.so.5.
 ----
-===libocrivist.so.3===
-*libocrivist.so.3* is derived from v.3.00 of [http://code.google.com/p/tesseract-ocr/ Tesseract-ocr]. It can be downloaded from the [http://code.google.com/p/ocrivist/downloads/detail?name=libocrivist-3.00r4.tar.gz Ocrivist] downloads section, compiled and installed. See [Dependencies#Compiling_and_installing_libraries below] for guidance on compiling.
+===libtesseract.so.3===
+*libtesseract.so.3* provides the OCR functionality in Ocrivist and is compiled from [http://code.google.com/p/tesseract-ocr/downloads/detail?name=tesseract-ocr-3.02.02.tar.gz Tesseract-ocr 3.02]. See [Dependencies#Compiling_and_installing_libraries below] for guidance on compiling.
+
+A precompiled version of libtesseract.so.3 is available in the [https://googledrive.com/host/0B20R2_1XVoDsTml3ejdmbXJiMXc/Linux/ Linux downloads folder]. This was compiled on Debian Squeeze and may not work on other distributions. Appropriate language data files should be [http://code.google.com/p/tesseract-ocr/downloads/list downloaded], extracted and installed in /usr/local/share/tessdata/
 ----
 ===libsane.so.1===
 *libsane.so.1* is installed by default on most distributions.
 ----
-===libaspell.so.15===
-*libaspell.so.15* is often installed by default and should be available in your distribution repository
+===GNUAspell===
+*GNU Aspell* is often installed by default but if not, it is probably available from your distribution repository.
+
+GNU Aspell is _not_ essential for Ocrivist to run, but is needed to be able to spellcheck a scanned document after OCR.
 ----
 ===Djvulibre===
 The *djvulibre* suite provides a number of programs used for manipulating and creating _djvu_ format files. It is usually available from your distribution repositories or from [http://djvu.sourceforge.net/ Sourceforge].
 
-The *djvulibre* programs are _not_ essential for Ocrivist to run, but without them it will not be possible to export Ocrivist projects to DjVu format.
+The djvulibre programs are _not_ essential for Ocrivist to run, but without them it will not be possible to export Ocrivist projects to DjVu format.
 
 ==Compiling and installing libraries===
-*Important:* both liblept and libocrivist will compile without libtiff but the ocrivist program will not work correctly if this happens. Most Linux distributions install libtiff by default but the *development* package also needs to be installed before attempting to compile a program or library that links to libtiff.
+*Important:* both liblept and libtesseract will compile without libtiff but the ocrivist program will not work correctly if this happens. Most Linux distributions install libtiff by default but the *development* package also needs to be installed before attempting to compile a program or library that links to libtiff.
 
 
-To compile and install *liblept*, first ensure that the libtiff development files are installed, then  download [http://code.google.com/p/leptonica/downloads/detail?name=leptonica-1.68.tar.gz leptonica v.1.68] and extract all the files to a convenient location. Using a terminal console, *cd* into the *leptonica* folder and enter 
+To compile and install *liblept*, first ensure that the libtiff development files are installed, then  download [http://code.google.com/p/leptonica/downloads/detail?name=leptonica-1.69.tar.gz leptonica v.1.69] and extract all the files to a convenient location. Using a terminal console, *cd* into the *leptonica* folder and enter 
 
 {{{./configure}}}
 
@@ -59,8 +66,8 @@ If all goes well you can then then use root privileges (*su* or *sudo*)  and ins
 
 {{{make install}}} 
 
-*libocrivist* is compiled and installed using the same procedure.
+*libtesseract* is compiled and installed using the same procedure.
 
-Note that *liblept* and *libtiff* must be installed before you attempt to compile *libocrivist*
+Note that *liblept* and *libtiff* must be installed before you attempt to compile *libtesseract*
 
  
